[package]
name = "intecture-auth"
version = "0.1.0"
authors = [ "Peter Hayes <peter.hayes@betweenlines.co.uk>" ]
license = "MPL-2.0"
description = "Authentication for Intecture infrastructure. Intecture is the developer friendly, multi-lingual configuration management tool."
keywords = ["intecture", "auth"]
homepage = "https://intecture.io"
repository = "https://github.com/intecture/auth"

[dev-dependencies]

tempdir = "0.3.*"

[dependencies]

chan = "0.1"
chan-signal = "0.1"
czmq = "0.1"
docopt = "0.6"
rustc-serialize = "0.3"
zdaemon = "0.0.2"
zmq = "0.8"

[lib]

name = "inauth_client"
path = "src/client.rs"

[[bin]]

name = "inauth"
path = "src/server.rs"

[[bin]]

name = "inauth_cli"
path = "src/cli.rs"
